--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .top {
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: rgb(147, 14, 149);
   position: sticky;
   top: 0;
   display: flex;
@@ -19,9 +19,9 @@
 }
 
 .topIcon {
-  font-size: 20px;
+  font-size: 25px;
   margin-right: 10px;
-  color: #444;
+  color: #142520;
   cursor: pointer;
 }
 
@@ -39,13 +39,14 @@
 
 .topListItem {
   margin-right: 20px;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 300;
   cursor: pointer;
+  color: rgb(244, 251, 251);
 }
 
 .topListItem:hover{
-    color: gray;
+    color: rgb(241, 237, 237);
 }
 
 .topImg {
@@ -59,6 +60,6 @@
 
 .topSearchIcon {
   font-size: 18px;
-  color: #666;
+  color: #f6f2f2;
   cursor: pointer;
 }
