--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -27,7 +27,8 @@
 }
 
 .loginInput {
-  padding: 10px;
+  padding: 20px;
+  width: 300px;
   background-color: white;
   border: none;
   border-radius: 10px;
@@ -40,9 +41,9 @@
 .loginButton {
   margin-top: 20px;
   cursor: pointer;
-  background-color: lightcoral;
+  background-color: rgb(235, 7, 219);
   color: white;
-  padding: 10px;
+  padding: 20px;
   border: none;
   border-radius: 10px;
   text-align: center;
@@ -52,9 +53,9 @@
   position: absolute;
   top: 60px;
   right: 20px;
-  background-color: teal;
+  background-color: rgb(8, 214, 214);
   cursor: pointer;
-  padding: 10px;
+  padding: 15px;
   border: none;
   color: white;
   border-radius: 10px;
