--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -27,7 +27,8 @@
 }
 
 .registerInput {
-  padding: 10px;
+  padding: 20px;
+  width: 300px;
   background-color: white;
   border: none;
   border-radius: 10px;
@@ -40,22 +41,22 @@
 .registerButton {
   margin-top: 20px;
   cursor: pointer;
-  background-color: teal;
+  background-color: rgb(13, 27, 228);
   color: white;
-  padding: 10px;
+  padding: 20px;
   border: none;
   border-radius: 10px;
   text-align: center;
 }
 
 .registerLoginButton {
-  position: absolute;
-  top: 60px;
-  right: 20px;
-  background-color: lightcoral;
+  margin-top: 20px;
+  text-align: center;
+  background-color: rgb(62, 225, 22);
   cursor: pointer;
-  padding: 10px;
+  padding: 20px;
   border: none;
   color: white;
   border-radius: 10px;
+  width: 340px;
 }
